# distributed-databases-lab1

./: .env-example  Makefile  OPTIMIZATION.md  README.md  THEORY.md  TPC_C_SPEC.md  apply_config.sh  create_cluster.sh  is_ready.sh  params.conf  pg_hba.conf  pgbench_log.12297  pgbench_log.12297.1  pgbench_log.12297.2  pgbench_log.12297.3  pgbench_log.15149  pgbench_log.15149.1  pgbench_log.15149.2  pgbench_log.15149.3  pgbench_log.18526  pgbench_log.18526.1  pgbench_log.18526.2  pgbench_log.18526.3  pgbench_log.4731  pgbench_log.4731.1  pgbench_log.4731.2  pgbench_log.4731.3  pyproject.toml  res.txt  run_on_helios.sh  seed_tpc_c.py  start_postgres.sh  sync.sh
.devcontainer/: create_cluster.sh  postgres.conf
scripts/: apply_config.sh  reload_postgres.sh  set_param.sh
sshfs/: mount_vm.sh
tpc-c/: delete_all.py  seed_tpc_c.py  tpc-c-new-order.sql
tpc-c-migrations/: 00002_create_indexes.sql
tpc-c/tpc-c-migrations/: 00001_create_tables.sql
